RESOLVED FIXED138986
[EME][Mac] Check the underlying error if the one returned by AVFoundation is AVErrorUnknown.
https://bugs.webkit.org/show_bug.cgi?id=138986
Summary [EME][Mac] Check the underlying error if the one returned by AVFoundation is ...
Jer Noble
Reported 2014-11-21 15:19:13 PST
[EME][Mac] Check the underlying error if the one returned by AVFoundation is AVErrorUnknown.
Attachments
Patch (3.18 KB, patch)
2014-11-21 15:20 PST, Jer Noble
no flags
Jer Noble
Comment 1 2014-11-21 15:20:57 PST
WebKit Commit Bot
Comment 2 2014-11-21 16:04:52 PST
Comment on attachment 242080 [details] Patch Clearing flags on attachment: 242080 Committed r176482: <http://trac.webkit.org/changeset/176482>
WebKit Commit Bot
Comment 3 2014-11-21 16:04:56 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2014-12-02 12:43:36 PST
Note You need to log in before you can comment on or make changes to this bug.