[EME][Mac] Check the underlying error if the one returned by AVFoundation is AVErrorUnknown. https://bugs.webkit.org/show_bug.cgi?id=138986

Reviewed by Eric Carlson.

When we recieve an error with the code AVErrorUnknown, look for an underlying error from CoreMedia (or another
lower-level framework) with a (presumably) more informative error code, and return that code instead.

* platform/graphics/avfoundation/objc/CDMSessionMediaSourceAVFObjC.mm:
(WebCore::systemCodeForError):
(WebCore::CDMSessionMediaSourceAVFObjC::layerDidReceiveError):
(WebCore::CDMSessionMediaSourceAVFObjC::rendererDidReceiveError):


Canonical link: https://commits.webkit.org/156862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176482 268f45cc-cd09-0410-ab3c-d52691b4dbfc